Initial IPC demo with latency stats calcs.

--- a/configs/ipc1.properties
+++ b/configs/ipc1.properties
@@ -1,4 +1,4 @@
-SESSION_HOST = shm://localhost:54321
+SESSION_HOST = listen://localhost:54321
 SESSION_VPN_NAME = default
 SESSION_USERNAME = default
 SESSION_PASSWORD = default
